backend/deploy/openshift/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: appstudio-qe
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: quality-dashboard
      component: postgres
  template:
    metadata:
      labels:
        app: quality-dashboard
        component: postgres
    spec:
      containers:
        - name: postgres
          image: quay.io/flacatus/postgres:14
          ports:
          - containerPort: 5432
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
          - name: data
            mountPath: /work
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
