backend/deploy/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: quality-backend-service
  namespace: appstudio-qe
  labels:
    app.kubernetes.io/component: quality-backend
    app.kubernetes.io/instance: quality-dashboard
    app.kubernetes.io/name: quality-dashboard
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  selector:
    app.kubernetes.io/component: quality-backend
    app.kubernetes.io/instance: quality-dashboard
    app.kubernetes.io/name: quality-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: appstudio-qe
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: pgweb-service
  namespace: appstudio-qe
  labels:
    service: quality-backend-pg-web
spec:
  type: NodePort
  ports:
   - name: "http"
     port: 8081
     protocol: TCP
     targetPort: 8081
  selector:
   app: quality-backend-pg-web
